full document node content is taken into account.

* The State panel manages explicit proof state output, with jEdit action
"isabelle.update-state" (shortcut S+ENTER) to trigger update according
to cursor position. Option "editor_output_state" controls implicit proof
state output in the Output panel: suppressing this reduces resource
requirements of prover time and GUI space.


*** Document preparation ***

* HTML presentation uses the standard IsabelleText font and Unicode
rendering of Isabelle symbols like Isabelle/Scala/jEdit.  The former
print mode "HTML" looses its special meaning.

* Commands 'paragraph' and 'subparagraph' provide additional section
headings. Thus there are 6 levels of standard headings, as in HTML.

* Text is structured in paragraphs and nested lists, using notation that
is similar to Markdown. The control symbols for list items are as
follows:

  \<^item>  itemize
  \<^enum>  enumerate
  \<^descr>  description

* Text may contain control symbols for markup and formatting as follows:

  \<^noindent>   \noindent
  \<^smallskip>   \smallskip
  \<^medskip>   \medskip
  \<^bigskip>   \bigskip

* Command 'text_raw' has been clarified: input text is processed as in
'text' (with antiquotations and control symbols). The key difference is
the lack of the surrounding isabelle markup environment in output.

* Document antiquotations @{emph} and @{bold} output LaTeX source
recursively, adding appropriate text style markup. These are typically
used in the short form \<^emph>\<open>...\<close> and \<^bold>\<open>...\<close>.


*** Isar ***

* Command 'obtain' binds term abbreviations (via 'is' patterns) in the
proof body as well, abstracted over relevant parameters.

* Improved type-inference for theorem statement 'obtains': separate
parameter scope for of each clause.

* Term abbreviations via 'is' patterns also work for schematic
statements: result is abstracted over unknowns.

* Local goals ('have', 'show', 'hence', 'thus') allow structured