@@ -201,8 +201,10 @@ isabelle.complete.label=Complete Isabelle text
 isabelle.complete.shortcut2=C+b
 isabelle.control-bold.label=Control bold
 isabelle.control-bold.shortcut=C+e RIGHT
+isabelle.control-emph.label=Control emphasized
+isabelle.control-emph.shortcut=C+e LEFT
 isabelle.control-reset.label=Control reset
-isabelle.control-reset.shortcut=C+e LEFT
+isabelle.control-reset.shortcut=C+e BACK_SPACE
 isabelle.control-sub.label=Control subscript
 isabelle.control-sub.shortcut=C+e DOWN
 isabelle.control-sup.label=Control superscript
